[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"

[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
predicates = "3.1.3"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
thiserror = "2.0.9"
serde_json = "1.0.134"
serde = { version = "1.0", features = ["derive"] }
buffered_offset_reader = "0.6.0"
slog = "2.7.0"
slog-term = "2.9.1"
sled = "0.34.6"
env_logger = "0.11.8"
